# roda.fyi

./: .gitignore  HANDOFF.md  LICENSE  README.md  index.html  pose_estimation_report.md  studio.html
assets/: figure3d.js  ginga.keyframes.js  moves.data.js  moves.extended.js  worldmap.js
assets/moves3d/: armada.js  au.js  bencao.js  ginga.js  meia-lua-de-frente.js
docs/: README.md
docs/superpowers/plans/: 2026-06-27-movement-pages-variations-comparer.md  2026-06-27-server-2d-pipeline-handoff.md  2026-06-27-video-mocap-pipeline.md
tools/: fetch_fonts.py  make_worldmap.py  pyproject.toml  screenshot.py  serve.py
tools/mocap/: CAPTURE.md  README.md  add_clip.py  capture_manifest.json  capture_moves.py  coverage.py  extract_ginga.py  extract_moves.py  fetch_clips.py  fetch_one.py  fetch_youtube.py  pose_track.py  sources.json
tools/mocap/capture/: __init__.py  align.py  fuse.py  geom.py  io_formats.py  retarget.py  run_tests.py  segment.py  segments.json
tools/mocap/clips/: manifest.json  youtube.json
tools/pose-editor/: index.html
tools/review/: index.html
tools/segment/: index.html
tools/studio/: build_moves.py
