[project]
name = "roda-tools"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "playwright>=1.40",
    "ultralytics>=8.3",
    "torch",
    "torchvision",
    "yt-dlp>=2025.1",
    "scipy",
    "mediapipe>=0.10.14",
]

# GPU build of PyTorch for a CUDA 13 driver.
# CPU-only machine? Remove the two blocks below — torch falls back to PyPI.
[[tool.uv.index]]
name = "pytorch-cu130"
url  = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch      = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
